# 3laba-3sem

./: CMakeLists.txt  main.cpp  menu.cpp  menu.h  test.cpp  test_btree.cpp  test_btree.h  test_hashtable.h  test_sparse_matrix.h  test_sparse_vector.h
DifferentStructures/: BTree.h  HashTable.h  IDictionary.h  SparseMatrix.h  SparseVector.h
